--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Random Quote Generator</h1>
     <div class="quote">
-      <p id="quote-text">Click the button to get a random quote.</p>
+      <p id="quote-text"></p>
     </div>
     <button id="generate-btn">Generate Quote</button>
   </div>
